[package]
authors = ["Jimmy Cuadra <jimmy@jimmycuadra.com>"]
description = "An OpenChatOps compliant chat bot."
homepage = "https://github.com/openchatops/rustin"
keywords = ["chat", "bot", "chatbot", "chatops", "openchatops"]
license = "MIT"
name = "rustin"
readme = "README.md"
repository = "https://github.com/openchatops/rustin"
version = "0.1.0"

[dependencies]
futures = "0.1.0"
protobuf = "1.0.23"
regex = "0.1.73"
router = "0.2.0"

[lib]
doctest = false
