[package]
authors = ["Jimmy Cuadra <jimmy@jimmycuadra.com>"]
description = "An OpenChatOps library for Rust."
documentation = "https://openchatops.github.io/rust/oco/"
homepage = "https://github.com/openchatops/rust"
keywords = ["chat", "bot", "chatbot", "chatops", "openchatops"]
license = "MIT"
name = "oco"
readme = "README.md"
repository = "https://github.com/openchatops/rust"
version = "0.1.0"

[dependencies]
futures = "0.1.0"
protobuf = "1.0.23"
regex = "0.1.73"
router = "0.2.0"

[lib]
doctest = false
